--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -10,11 +10,14 @@ on:
       artifact:
         required: true
         type: string
+      runsOn:
+        required: true
+        type: string
 
 jobs:
   benchmarks:
     name: ${{ inputs.name }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runsOn }}
     container:
       image: cimg/node:22.13-browsers
     steps:
